--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.note{
+  background-color: #fef68a;
+  border-radius: 10px;
+  padding: 1 rem;
+  min-height: 270px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin:10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.note-list{
+  display: grid;
+  grid-gap: 1 rem;
+  grid-template-columns: repeat(auto-fit , minmax(250px,1fr));
+}
+
+.note-footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
